test-suite/failure/check.v
Arguments eq [A].

Fail Check (bool = true).
